src/objects/MessageInApproval__c.object
<CustomObject>
    <fields>
        <fullName>Bcc__c</fullName>
        <label>Bcc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cc__c</fullName>
        <label>Cc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCustomerCommunication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email is sent from Customer Quick Action</description>
        <label>Is Customer Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextContent__c</fullName>
        <label>Text Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Message in Approval</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Message in Approval Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>